Updates for effective work with large clusters